<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationPageActivity"
    android:paddingTop="?attr/actionBarSize"
    android:id="@+id/AuthenticationPageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Title TextView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <EditText
                android:id="@+id/registerUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Create Username"
                android:inputType="text" />

            <EditText
                android:id="@+id/registerAffiliation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Enter Affiliation"
                android:inputType="text" />

            <RadioGroup
                android:id="@+id/registerRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioInternational"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="International"/>

                <RadioButton
                    android:id="@+id/radioNative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Native Speaker"
                    android:checked="true"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:text="Interests"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/interestsRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- First Row of Interests -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/sportsCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sports" />

                        <CheckBox
                            android:id="@+id/videoGamesCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Video Games" />

                    </LinearLayout>

                    <!-- Second Row of Interests -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/moviesCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Movies" />

                        <CheckBox
                            android:id="@+id/fashionCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fashion" />

                        <CheckBox
                            android:id="@+id/musicCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Music" />

                    </LinearLayout>
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register New Account"
                android:layout_gravity="center" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>