<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createMeetingActivity"
    android:paddingTop="?attr/actionBarSize"
    android:id="@+id/createMeetingActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Title TextView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <EditText
                android:id="@+id/meetingNameText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="Enter Meeting Name"
                android:inputType="text" />
            <EditText
                android:id="@+id/meetingDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="Enter Meeting Description"
                android:inputType="text" />

            <TextView
                android:id="@+id/meetingDateTimeText"
                android:layout_width="match_parent"
                android:layout_height="80dp"/>
            <Button
                android:id="@+id/btnPickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick date"
                android:layout_gravity="center" />
            <Button
                android:id="@+id/btnPickTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick time"
                android:layout_gravity="center" />


            <RadioGroup
                android:id="@+id/radioGroupLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioZoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zoom"/>

                <RadioButton
                    android:id="@+id/radioPhysical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Physical"/>
            </RadioGroup>
            <!-- Fields for Physical -->
            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioGroupLocation"
                android:layout_marginTop="16dp"
                android:hint="Enter Location"
                android:inputType="text"
                android:visibility="gone"/>


            <Button
                android:id="@+id/createNewMeetingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Meeting"
                android:layout_gravity="center" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>