<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationPageActivity"
    android:paddingTop="?attr/actionBarSize"
    android:id="@+id/verificationPage">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Title TextView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="150dp">

            <!-- EditText for verification -->
            <EditText
                android:id="@+id/verificationText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="Enter Verification Code"
                android:inputType="text" />

            <!-- Button to initiate the search -->
            <Button
                android:id="@+id/verifyButton"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:text="Verify"
                android:layout_gravity="center" />
            <Button
                android:id="@+id/resendButton"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:text="Resend Code"
                android:layout_gravity="center" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>